fix: add color with more contrast to improve accesibility

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,15 @@
+:root {
+  --dark_color: rgba(0, 0, 0, 0.1);
+  --light_color: #f7f9fc;
+  --accent_color: #015a05;
+  --warning_color: #ff5252;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f7f9fc;
+  background-color: var(--light_color);
   color: #333;
 }
 
@@ -12,11 +19,11 @@ a {
 }
 
 header {
-  background-color: #4caf50;
+  background-color: var(--accent_color);
   color: white;
   padding: 1rem 2rem;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px var(--dark_color);
   margin: 0;
 }
 
@@ -52,7 +59,7 @@ main {
 }
 
 #patient-code-input:focus {
-  border-color: #4caf50;
+  border-color: var(--accent_color);
   outline: none;
 }
 
@@ -64,7 +71,7 @@ button[type="submit"] {
   background-color: white;
   padding: 2rem;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px var(--dark_color);
 }
 
 #patient-medication-list {
@@ -88,12 +95,12 @@ button[type="submit"] {
 .medication-item h3 {
   margin: 0;
   font-size: 1.2rem;
-  color: #4caf50;
+  color: var(--accent_color);
 }
 
 .medication-item h3 a {
   text-decoration: none;
-  color: #4caf50;
+  color: var(--accent_color);
 }
 
 .medication-item h3 a:hover {
@@ -119,7 +126,7 @@ button[type="submit"] {
   margin-top: 1rem;
   border-radius: 4px;
   font-weight: bold;
-  color: #d32f2f;
+  color: var(--dark_color);
 }
 
 article h2 {
@@ -150,7 +157,7 @@ form label {
   background-color: white;
   padding: 1.5rem;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px var(--dark_color);
   width: 100%;
   display: flex; 
   flex-direction: column;
@@ -170,7 +177,7 @@ form label {
 
 .periods select:focus,
 .periods input:focus {
-  border-color: #4caf50;
+  border-color: var(--accent_color);
   outline: none;
   max-width: 100%;
 }
@@ -179,7 +186,7 @@ form label {
   background-color: white;
   padding: 2rem;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px var(--dark_color);
   overflow-x: auto;
 }
 
@@ -203,7 +210,7 @@ form label {
 
 .medication-schedule th {
   background-color: #f1f8e9;
-  color: #4caf50;
+  color: var(--accent_color);
 }
 
 caption {
